data/collection/fixes/descriptions/java/JDK-8013485
The following code does not compile:

@interface A {
    Runnable r1 = ()->{}; //1
    Runnable r2 = new Runnable() { public void run() { }}; //2
}

@A
class Test { }

Following output is generated:

Test.java:93: error: annotation A is missing values for attributes lambda$0,<clinit>
@A
^
1 error

However, this is only partly lambda-related - if line (1) is commented, the following output is generated:

Test.java:94: error: annotation A is missing value for the attribute <clinit>
@A
^
1 error

